# bazel-nodejs

./: .gitignore  README.md  WORKSPACE.bazel  package.json
apps/simple_calculator/: BUILD.bazel  calculator.js  calculator.spec.js
